force-app/main/default/objects/Survey_Setting__mdt/Survey_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Survey Setting</label>
    <pluralLabel>Survey_Settings</pluralLabel>
</CustomObject>