force-app/main/default/objects/Survey_Setting__mdt/fields/Crypto_Message_Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Crypto_Message_Public_Key__c</fullName>
    <label>Crypto Message Public Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>