force-app/main/default/objects/Survey_Setting__mdt/fields/Facebook_API_Version__c.field-meta.xml
<CustomField>
    <fullName>Facebook_API_Version__c</fullName>
    <label>Facebook API Version</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>