force-app/main/default/objects/Survey_Setting__mdt/fields/Facebook_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Application_Id__c</fullName>
    <label>Facebook_Application_Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>