force-app/main/default/objects/Survey_Setting__mdt/fields/Facebook_Graph_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Graph_Client_Secret__c</fullName>
    <label>Facebook Graph Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>