force-app/main/default/objects/Survey_Setting__mdt/fields/Facebook_Graph_Url__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Graph_Url__c</fullName>
    <label>Facebook Graph Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>