force-app/main/default/objects/Survey_Setting__mdt/fields/Facebook_Pixel_Id__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Pixel_Id__c</fullName>
    <label>Facebook Pixel Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>