force-app/main/default/objects/Survey_Setting__mdt/fields/Instagram_Url__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Url__c</fullName>
    <label>Instagram_Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>