force-app/main/default/objects/Survey_Setting__mdt/fields/Survey_Domain__c.field-meta.xml
<CustomField>
    <fullName>Survey_Domain__c</fullName>
    <label>Survey Domain</label>
    <type>Url</type>
</CustomField>