force-app/main/default/objects/Survey_Setting__mdt/fields/Twitter_Url__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Url__c</fullName>
    <label>Twitter_Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>