force-app/main/default/objects/Survey_Setting__mdt/fields/TypeForm_Url__c.field-meta.xml
<CustomField>
    <fullName>TypeForm_Url__c</fullName>
    <label>TypeForm_Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>