force-app/main/default/objects/Survey_Setting__mdt/fields/UrlRewriterPath__c.field-meta.xml
<CustomField>
    <fullName>UrlRewriterPath__c</fullName>
    <label>UrlRewriterPath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>