force-app/main/default/objects/Survey_Setting__mdt/fields/UrlRewriterVF__c.field-meta.xml
<CustomField>
    <fullName>UrlRewriterVF__c</fullName>
    <label>UrlRewriterVF</label>
    <type>Url</type>
</CustomField>